<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    style="@style/input_style"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/titleTXT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/biryani"
        android:padding="12dp"
        android:text="@string/imc"
        style="@style/input_style"
        android:textSize="54sp" />


    <TextView
        android:id="@+id/titleDescriptionTXT"
        android:layout_marginTop="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:fontFamily="@font/biryani"
        android:text="@string/imcDesc"
        style="@style/input_style"
        android:textSize="12dp" />

    <EditText
        android:id="@+id/pesoEDT"
        android:layout_width="match_parent"
        android:hint="@string/peso_hint"
        android:layout_height="wrap_content"
        style="@style/input_style" />

    <EditText
        android:id="@+id/alturaEDT"
        style="@style/input_style"
        android:hint="@string/hint_altura"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />


    <Button
        android:id="@+id/calcularBTN"
        android:backgroundTint="@color/green_everis"
        android:text="@string/calcular"
        android:padding="18dp"
        android:textSize="16sp"
        android:layout_marginTop="40dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


</LinearLayout>